# RAG

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: eval.yml
api/: app.py  schemas.py  state.py
backend/: ingest.py  main.py  observability.py  pyproject.toml  requirements.txt
backend/api/: app.py  main.py  models.py
backend/api/routes/: chat.py  documents.py  ingest.py  query.py
backend/config/: prompts.yaml  settings.py
backend/embedding/: embedder.py
backend/generation/: citation_check.py  context_builder.py  generator.py  llm.py  prompt_loader.py
backend/ingestion/: chunker.py  embedder.py  indexer.py  parser.py
backend/retrieval/: __init__.py  bm25_retriever.py  fusion.py  reranker.py  vector_retriever.py
backend/retriever/: retriever.py
backend/tests/retriever/: test_retriever.py
backend/tests/vectorstore/: test_qdrant_store.py
backend/vectorstore/: qdrant_store.py
embedding/: embedder.py
eval/: check_thresholds.py  ragas_eval.py  run_eval.py  testset.json  testset_extended.json
frontend/: index.html
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: ChatWindow.tsx  Header.tsx  InputBar.tsx  Message.tsx  SourcesPanel.tsx
frontend/src/hooks/: useChat.ts
generation/: generator.py
ingestion/: chunker.py  loader.py
retriever/: retriever.py
tests/: verify_ingestion.py
tests/embedding/: test_embedder.py
tests/ingestion/: test_chunker.py
vectorstore/: faiss_store.py
