[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "faiss-cpu>=1.14.3",
    "langchain>=1.3.10",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "pymupdf>=1.27.2.3",
    "sentence-transformers>=5.6.0",
]
[dependency-groups]
dev = ["pytest>=8.0"]