[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.138.1",
    "langchain>=1.3.10",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-ollama>=1.1.0",
    "pymupdf>=1.27.2.3",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.6.0",
]
[dependency-groups]
dev = ["pytest>=8.0"]
