[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi[standard]>=0.138.1",
    "ipykernel>=7.3.0",
    "langchain>=1.3.10",
    "langchain-community>=0.3.27,<0.4",
    "langchain-core>=1.4.8",
    "langchain-ollama>=1.1.0",
    "langsmith>=0.8.18",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "ragas>=0.4.3",
    "sentence-transformers>=5.6.0",
]
[dependency-groups]
dev = ["pytest>=8.0"]
